HW7/E-2.3.19-Combination/wdir_msg/compile.err

Combination.java:31: error: ']' expected
                if (choice[i]==true) System.out.print(char[i]);
                                                           ^
Combination.java:31: error: ';' expected
                if (choice[i]==true) System.out.print(char[i]);
                                                            ^
2 errors


